# gurujisivananda

./: .dockerignore  .gitignore  ADMIN.md  Cargo.toml  Dockerfile  README.md  deny.toml  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
end2end/: playwright.config.ts
end2end/tests/: example.spec.ts
migrations/: 20260227102437_create_audio_tracks_table.sql  20260310120000_create_admin_and_sessions.sql  20260310120001_create_channels_and_jobs.sql  20260311000000_add_job_progress_columns.sql  20260312000000_add_channel_batch_size.sql
public/: manifest.json  sw.js
scripts/: init_db.sh
src/: app.rs  auth.rs  configuration.rs  db.rs  events.rs  import.rs  jobs.rs  lib.rs  main.rs  pwa.rs  storage.rs
src/components/: _header.scss  _toast.scss  mod.rs  toast.rs
src/pages/: _admin.scss  _guruji.scss  _login.scss  admin.rs  guruji.rs  login.rs  mod.rs
src/routes/: jobs_sse.rs  mod.rs  tracks.rs
style/: _reset.scss  main.scss
