[package]
name = "gurujisivananda"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8" }
leptos_router = { version = "0.8" }
axum = { version = "0.8", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
leptos_axum = { version = "0.8", optional = true }
leptos_meta = { version = "0.8" }
tokio = { version = "1", features = ["rt-multi-thread", "process"], optional = true }
wasm-bindgen = { version = "0.2.106", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "uuid", "chrono", "tls-rustls"], optional = true }
serde = { version = "1", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["yaml"], optional = true }
serde-aux = { version = "4", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"], optional = true }
tracing-bunyan-formatter = { version = "0.3", optional = true }
tracing-log = { version = "0.2", optional = true }
tower-http = { version = "0.6", features = ["trace", "request-id", "util"], optional = true }
tower = { version = "0.5", optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
secrecy = { version = "0.8", features = ["serde"], optional = true }
utoipa = { version = "5", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "9", features = ["axum"], optional = true }
serde_json = { version = "1", optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }
walkdir = { version = "2", optional = true }
aws-sdk-s3 = { version = "1", optional = true, default-features = false, features = ["rustls", "rt-tokio", "sigv4a"] }
aws-smithy-http-client = { version = "1.1", optional = true, default-features = false, features = ["hyper-014"] }
hyper-rustls-0_24 = { package = "hyper-rustls", version = "0.24", optional = true, default-features = false, features = ["native-tokio", "http1", "tls12"] }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
argon2 = { version = "0.5", optional = true }
rand = { version = "0.8", optional = true }
dotenvy = { version = "0.15", optional = true }
regex = { version = "1", optional = true }
libc = { version = "0.2", optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
web-sys = { version = "0.3", features = ["EventSource", "MessageEvent"], optional = true }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "dep:sqlx",
    "dep:serde_json",
    "dep:tokio-util",
    "dep:walkdir",
    "dep:config",
    "dep:serde-aux",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tracing-bunyan-formatter",
    "dep:tracing-log",
    "dep:tower-http",
    "dep:tower",
    "dep:uuid",
    "dep:chrono",
    "dep:secrecy",
    "dep:utoipa",
    "dep:utoipa-swagger-ui",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:aws-sdk-s3",
    "dep:aws-smithy-http-client",
    "dep:hyper-rustls-0_24",
    "dep:argon2",
    "dep:rand",
    "dep:dotenvy",
    "dep:regex",
    "dep:libc",
    "dep:tokio-stream",
]

[[bin]]
name = "import-audio"
path = "src/bin/import_audio.rs"
required-features = ["ssr"]

[dev-dependencies]
reqwest = "0.12"
tokio = { version = "1", features = ["rt", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate"] }
uuid = { version = "1", features = ["v4"] }

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
bin-target = "gurujisivananda"

# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "gurujisivananda"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
